# pan1080-lucky65

./: README.md
firmware/pan1080-fw/: CMakeLists.txt
firmware/pan1080-fw/src/ap/: ap.c
firmware/pan1080-fw/src/bsp/: bsp.c  bsp.h
firmware/pan1080-fw/src/bsp/device/: pan1080_conf.h  pan1080_it.c
firmware/pan1080-fw/src/bsp/startup/: startup_pan1080.s
firmware/pan1080-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/pan1080-fw/src/lib/CMSIS/Device/PAN1080/Include/: system_PanSeries.h
firmware/pan1080-fw/src/lib/CMSIS/Device/PAN1080/Source/: pan_retarget.c_  system_PANSeries.c
firmware/pan1080-fw/src/lib/panchip/panplat/pan1080/peripheral/inc/: pan_gpio.h
firmware/pan1080-fw/src/lib/panchip/panplat/pan1080/peripheral/src/: pan_adc.c  pan_hal_spi.c  pan_hal_uart.c  pan_hal_wwdt.c  pan_timer.c  pan_uart.c
firmware/pan1080-fw/src/lib/panchip/panplat/pan1080/usb/usb1.1/: endpoint.c  endpoint.h  endpoint0.c  endpoint0.h  musbfsfc.c
firmware/pan1080-fw/tools/: PAN1080_DFP.1.0.0.pack  pan1080.hex
firmware/pan1080-fw/tools/PAN1080_DFP.1.0.0/: PAN1080_DFP.pdsc
firmware/pan1080-fw/tools/PAN1080_DFP.1.0.0/Flash/: PAN1080_1020KB_FLASH.FLM
firmware/pan1080-fw/tools/jlink/: JLinkDevices.xml
